- (WIP) event-driven architecture refactor - (WIP) retrieving holidays from comunytek

--- a/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
+++ b/wksp/timehammer/web/src/main/resources/META-INF/resources/demo.html
@@ -149,6 +149,14 @@
                             <button id="cleanPastWorkersHolidays" type="button" class="btn btn-sm btn-success col-md-1 schedule-button"><i class="fas fa-play"></i></button>
                             <small class="text-left col-md-4 pl-2 schedule-duration"></small>
                         </div>
+
+                        <hr>
+
+                        <div class="form-row mt-2 align-items-center">
+                            <span class="lead text-left col-md-7">Update workers holidays test</span>
+                            <button id="updateWorkersHolidaysTest" type="button" class="btn btn-sm btn-success col-md-1 schedule-button"><i class="fas fa-play"></i></button>
+                            <small class="text-left col-md-4 pl-2 schedule-duration"></small>
+                        </div>
                     </form>
                 </div>
             </div>
